fixing box overlap

--- a/acronymgame/src/pages/FindaGame.css
+++ b/acronymgame/src/pages/FindaGame.css
@@ -16,6 +16,7 @@
 }
 
 .findrandomgame{
+    display: inline-block;
     margin: 0 auto;
     position: absolute;
     border: 2px solid #8d8d8d;
@@ -143,6 +144,7 @@
 
 
 .entergamecode{
+    display: inline-block;
     margin: 0 auto;
     position: absolute;
     border: 2px solid #8d8d8d;
@@ -156,6 +158,7 @@
     display: inline-block;
 }
 .createagame{
+    display: inline-block;
     margin: 0 auto;
     position: absolute;
     position: relative;
